--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"clean": "rimraf dist",
 		"tsc": "tsc",
 		"copy": "ts-node src/tools/copy-build-view.ts",
-		"build": "npm i & npm run clean & npm run tsc & npm run copy",
+		"build": "npm run clean & npm run tsc & npm run copy",
 		"typeorm:generate": "npx typeorm-ts-node-esm migration:generate -d src/db/dbcontext.ts"
 	},
 	"keywords": [],
@@ -28,8 +28,7 @@
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.3.17",
-		"winston": "^3.11.0",
-		"rimraf": "^5.0.5"
+		"winston": "^3.11.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
@@ -39,6 +38,7 @@
 		"@types/express-session": "1.17.0",
 		"@types/node": "^20.8.10",
 		"@types/shelljs": "^0.8.15",
+		"rimraf": "^5.0.5",
 		"shelljs": "^0.8.5"
 	}
 }
