--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
 		"mysql2": "^3.6.3",
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.1.13",
-		"typeorm": "^0.3.17",
-		"winston": "^3.11.0",
 		"rimraf": "^3.0.2",
-		"ts-node": "^10.4.0"
+		"ts-node": "^10.4.0",
+		"typeorm": "^0.3.17",
+		"winston": "^3.11.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
