--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "blog-app",
+	"name": "blog-mvc-ejs",
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.js",
@@ -9,7 +9,7 @@
 		"clean": "rimraf dist",
 		"tsc": "tsc",
 		"copy": "ts-node src/tools/copy-build-view.ts",
-		"build": "npm install & npm run clean & npm run tsc & npm run copy",
+		"build": "npm run clean & npm run tsc & npm run copy",
 		"typeorm:generate": "npx typeorm-ts-node-esm migration:generate -d src/db/dbcontext.ts"
 	},
 	"keywords": [],
@@ -27,10 +27,9 @@
 		"mysql2": "^3.6.3",
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.1.13",
-		"rimraf": "^3.0.2",
-		"ts-node": "^10.4.0",
 		"typeorm": "^0.3.17",
 		"winston": "^3.11.0"
+		
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
@@ -40,6 +39,7 @@
 		"@types/express-session": "1.17.0",
 		"@types/node": "^20.8.10",
 		"@types/shelljs": "^0.8.15",
+		"rimraf": "^5.0.5",
 		"shelljs": "^0.8.5"
 	}
 }
